feat: Display modelUsed badge in UI and implement robust link matching