@@ -30,15 +30,12 @@ public class NewsSystemService {
     @Value("${gemini.api.key}")
     private String apiKey;
 
-    // Matches your provided screenshots for the best 2026 performance
+    // Conservative fallback list using only highly reliable 2026 models
     private static final List<String> FALLBACK_MODELS = List.of(
         "gemini-2.5-flash-lite",
-        "gemini-2.0-flash-lite-001",
-        "gemini-2.0-flash-001",
         "gemini-2.5-flash",
-        "gemini-2.0-flash",
-        "gemini-2.5-pro",
-        "gemini-2.0-pro-exp-02-05"
+        "gemini-2.0-flash-lite",
+        "gemini-2.0-flash"
     );
 
     private static final String API_URL_TEMPLATE = "https://generativelanguage.googleapis.com/v1beta/models/%s:generateContent?key=%s";
@@ -49,30 +46,28 @@ public class NewsSystemService {
             .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
             .configure(JsonParser.Feature.ALLOW_COMMENTS, true);
 
+    private record ApiResult(String text, String model) {}
+
     public List<GeminiModel> listAvailableModels() {
         if (apiKey == null || apiKey.isEmpty() || apiKey.equals("your_api_key_here")) {
             return Collections.emptyList();
         }
-
         try {
             String url = String.format(MODELS_API_URL, apiKey);
             ResponseEntity<Map> response = restTemplate.exchange(url, HttpMethod.GET, null, Map.class);
-
             if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
                 List<Map<String, Object>> modelsList = (List<Map<String, Object>>) response.getBody().get("models");
                 if (modelsList != null) {
                     List<GeminiModel> geminiModels = new ArrayList<>();
                     
-                    // Manually force-add the high volume models first so they always appear in dropdown
-                    geminiModels.add(new GeminiModel("gemini-2.5-flash-lite", "v1beta", "Gemini 2.5 Flash-Lite", "Highest Volume Option (1000 RPD)", 1000000, 65535));
-                    geminiModels.add(new GeminiModel("gemini-2.0-flash-lite-001", "v1beta", "Gemini 2.0 Flash-Lite 001", "Fast & High Quota", 1000000, 65535));
+                    // Always ensure flash-lite is at top for user selection
+                    geminiModels.add(new GeminiModel("gemini-2.5-flash-lite", "v1beta", "Gemini 2.5 Flash-Lite", "Highest Volume (1000 RPD)", 1000000, 65535));
                     
                     for (Map<String, Object> m : modelsList) {
                         String name = (String) m.get("name"); 
                         if (name != null && name.contains("gemini")) {
                             String shortName = name.replace("models/", "");
-                            // Avoid duplicates
-                            if (shortName.equals("gemini-2.5-flash-lite") || shortName.equals("gemini-2.0-flash-lite-001")) continue;
+                            if (shortName.equals("gemini-2.5-flash-lite")) continue;
                             
                             geminiModels.add(new GeminiModel(
                                 shortName,
@@ -87,22 +82,17 @@ public class NewsSystemService {
                     return geminiModels;
                 }
             }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return List.of(new GeminiModel("gemini-2.5-flash-lite", "v1beta", "Gemini 2.5 Flash-Lite", "High volume fallback", 1000000, 65535));
+        } catch (Exception e) { e.printStackTrace(); }
+        return List.of(new GeminiModel("gemini-2.5-flash-lite", "v1beta", "Gemini 2.5 Flash-Lite", "Manual Fallback", 1000000, 65535));
     }
 
     public AnalysisResponse.AnalysisData analyzeText(String text) {
         if (apiKey == null || apiKey.isEmpty() || apiKey.equals("your_api_key_here")) {
             return new AnalysisResponse.AnalysisData("API Key is not configured.");
         }
-        
         String prompt = """
                 Analyze the following news article text. Focus on current developments.
-                
                 "%s"
-                
                 Return a valid JSON object (and ONLY JSON, no markdown formatting) with the following specific fields:
                 {
                     "summary": "A concise summary of the event",
@@ -112,197 +102,119 @@ public class NewsSystemService {
                     "urgency": "Medium" 
                 }
                 """.formatted(text.replace("\"", "\\\"")); 
-
         try {
-            String rawText = callGeminiApiWithFallback(prompt, null);
-            return parseJsonFromAI(rawText);
+            ApiResult result = callGeminiApiWithFallback(prompt, null);
+            return parseJsonFromAI(result.text());
         } catch (Exception e) {
             return new AnalysisResponse.AnalysisData("Analysis failed: " + e.getMessage());
         }
     }
 
-    private AnalysisResponse.AnalysisData parseJsonFromAI(String rawText) {
-        try {
-            String jsonText = rawText.replace("```json", "").replace("```", "").trim();
-            return objectMapper.readValue(jsonText, AnalysisResponse.AnalysisData.class);
-        } catch (Exception e) {
-            System.err.println("Failed to parse JSON from AI: " + rawText);
-            return new AnalysisResponse.AnalysisData("Failed to parse AI response.");
-        }
-    }
-
     public List<MergedNewsCluster> processAndClusterNews(List<NewsItem> items, String language, boolean shouldCluster, String preferredModel) {
         if (apiKey == null || apiKey.isEmpty() || apiKey.equals("your_api_key_here")) {
-             return List.of(new MergedNewsCluster("API Key Missing", "Please configure gemini.api.key in application.properties", "N/A", "N/A", "0", "N/A", Collections.emptyList()));
+             return List.of(new MergedNewsCluster("API Key Missing", "Please configure gemini.api.key", "N/A", "N/A", "0", "N/A", Collections.emptyList(), "None"));
         }
-
         List<NewsItem> validItems = items.stream()
                 .filter(item -> !item.title().startsWith("System Error") && !item.title().startsWith("No News Found"))
                 .collect(Collectors.toList());
-
         if (validItems.isEmpty()) {
-            return List.of(new MergedNewsCluster("No Content to Analyze", "The news feed returned no valid articles to analyze.", "N/A", "N/A", "0", "N/A", Collections.emptyList()));
+            return List.of(new MergedNewsCluster("No Content to Analyze", "The news feed returned no valid articles.", "N/A", "N/A", "0", "N/A", Collections.emptyList(), "None"));
         }
-
         StringBuilder itemsText = new StringBuilder();
         for (NewsItem item : validItems) {
-            itemsText.append("- Title: ").append(item.title()).append("\n");
-            itemsText.append("  Link: ").append(item.link()).append("\n");
-            itemsText.append("  Snippet: ").append(item.summary()).append("\n\n");
+            itemsText.append("- Title: ").append(item.title()).append("\nLink: ").append(item.link()).append("\nSnippet: ").append(item.summary()).append("\n\n");
         }
-        
         String fullText = itemsText.toString();
-        if (fullText.length() > 30000) {
-            fullText = fullText.substring(0, 30000) + "...[TRUNCATED]";
-        }
+        if (fullText.length() > 30000) fullText = fullText.substring(0, 30000) + "...[TRUNCATED]";
 
         String clusteringInstruction = shouldCluster 
-            ? "1. CLUSTERING: Group articles that are about the SAME event or directly related incidents. You MUST synthesize a single, comprehensive summary that combines unique details from ALL articles in the cluster. Prioritize the most recent information."
-            : "1. NO CLUSTERING: Treat each news item as a completely separate topic. Do NOT merge them. Create one output object for each input item.";
+            ? "1. CLUSTERING: Group articles that are about the SAME event. Synthesize a single comprehensive summary. Prioritize LATEST info."
+            : "1. NO CLUSTERING: Treat each item separately.";
 
         String prompt = """
-                You are an expert news analyst. Analyze the following news items. FOCUS ON LATEST INFORMATION.
-                
-                CRITICAL INSTRUCTIONS:
+                You are an expert analyst. Analyze these news items. FOCUS ON LATEST INFORMATION.
                 %s
-                2. TRANSLATION: You MUST translate the values of "topic", "summary", "economic_impact", "global_impact", and "what_next" into %s.
-                3. ANALYSIS: For each group (or item), provide a comprehensive summary, economic impact, global impact, impact rating (1-10), and a prediction of what happens next.
-                
-                Input News Items:
+                2. TRANSLATION: Translate \"topic\", \"summary\", \"economic_impact\", \"global_impact\", and \"what_next\" into %s.
+                3. ANALYSIS: For each group, provide summary, economic impact, global impact, impact rating (1-10), and prediction.
+                Input:
                 %s
-                
                 Output Schema (JSON Array):
-                [
-                  {
-                    "topic": "Translated Headline",
-                    "summary": "Translated detailed synthesized summary.",
-                    "economic_impact": "Translated economic analysis.",
-                    "global_impact": "Translated geopolitical/global impact.",
-                    "impact_rating": "8",
-                    "what_next": "Translated prediction.",
-                    "related_links": ["url1", "url2"]
-                  }
-                ]
+                [{"topic":"...","summary":"...","economic_impact":"...","global_impact":"...","impact_rating":"8","what_next":"...","related_links":["url1"]}]
                 """.formatted(clusteringInstruction, language.equals("Chinese") ? "Simplified Chinese (zh-CN)" : language, fullText);
 
         try {
-            String rawText = callGeminiApiWithFallback(prompt, preferredModel);
-            System.out.println("DEBUG: AI Cluster Response: " + rawText);
-            return parseClusterJsonFromAI(rawText);
+            ApiResult result = callGeminiApiWithFallback(prompt, preferredModel);
+            List<MergedNewsCluster> clusters = parseClusterJsonFromAI(result.text());
+            return clusters.stream()
+                .map(c -> new MergedNewsCluster(c.topic(), c.summary(), c.economic_impact(), c.global_impact(), c.impact_rating(), c.what_next(), c.related_links(), result.model()))
+                .collect(Collectors.toList());
         } catch (Exception e) {
-            e.printStackTrace();
-            String errorMessage = e.getMessage();
-            if (e instanceof HttpClientErrorException) {
-                errorMessage = ((HttpClientErrorException) e).getResponseBodyAsString();
-            }
-            return List.of(new MergedNewsCluster("System Error", "Analysis Failed: " + errorMessage, "N/A", "N/A", "0", "N/A", Collections.emptyList()));
+            String msg = (e instanceof HttpClientErrorException) ? ((HttpClientErrorException) e).getResponseBodyAsString() : e.getMessage();
+            return List.of(new MergedNewsCluster("System Error", "Analysis Failed: " + msg, "N/A", "N/A", "0", "N/A", Collections.emptyList(), "Error"));
         }
     }
 
-    private String callGeminiApiWithFallback(String prompt, String preferredModel) {
-        // Safety Settings
+    private ApiResult callGeminiApiWithFallback(String prompt, String preferredModel) {
         List<Map<String, String>> safetySettings = List.of(
             Map.of("category", "HARM_CATEGORY_HARASSMENT", "threshold", "BLOCK_NONE"),
             Map.of("category", "HARM_CATEGORY_HATE_SPEECH", "threshold", "BLOCK_NONE"),
             Map.of("category", "HARM_CATEGORY_SEXUALLY_EXPLICIT", "threshold", "BLOCK_NONE"),
             Map.of("category", "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold", "BLOCK_NONE")
         );
-
-        Map<String, Object> part = Map.of("text", prompt);
-        Map<String, Object> content = Map.of("parts", List.of(part));
-        Map<String, Object> requestBody = Map.of(
-            "contents", List.of(content),
-            "safetySettings", safetySettings
-        );
-
+        Map<String, Object> requestBody = Map.of("contents", List.of(Map.of("parts", List.of(Map.of("text", prompt)))), "safetySettings", safetySettings);
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
         HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
 
-        Exception lastException = null;
-        
-        java.util.List<String> modelsToTry = new java.util.ArrayList<>();
-        if (preferredModel != null && !preferredModel.isEmpty()) {
-            modelsToTry.add(preferredModel);
-        }
-        for (String m : FALLBACK_MODELS) {
-            if (!modelsToTry.contains(m)) {
-                modelsToTry.add(m);
-            }
-        }
+        List<String> modelsToTry = new ArrayList<>();
+        if (preferredModel != null && !preferredModel.isEmpty()) modelsToTry.add(preferredModel);
+        for (String m : FALLBACK_MODELS) { if (!modelsToTry.contains(m)) modelsToTry.add(m); }
 
+        List<String> errors = new ArrayList<>();
         for (String model : modelsToTry) {
             try {
                 System.out.println("Trying Gemini Model: " + model);
                 String url = String.format(API_URL_TEMPLATE, model, apiKey);
                 ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-                
                 if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
                     String extracted = extractTextFromResponse(response.getBody());
-                    if (extracted == null || extracted.isEmpty() || extracted.equals("{}")) {
-                        throw new RuntimeException("Model " + model + " returned empty content (Safety Filter?)");
-                    }
-                    return extracted;
+                    if (extracted == null || extracted.isEmpty() || extracted.equals("{}")) throw new RuntimeException("Safety Blocked/Empty");
+                    return new ApiResult(extracted, model);
                 }
             } catch (HttpClientErrorException e) {
-                System.err.println("Model " + model + " failed: " + e.getStatusCode() + " - " + e.getResponseBodyAsString());
-                if (e.getStatusCode().value() == 429 || e.getStatusCode().value() == 503 || e.getStatusCode().value() == 404) {
-                    lastException = e;
-                    continue; 
-                } else {
-                    throw new RuntimeException("Gemini API Error (" + model + "): " + e.getResponseBodyAsString());
-                }
-            } catch (Exception e) {
-                System.err.println("Model " + model + " error: " + e.getMessage());
-                lastException = e;
+                String error = "Model " + model + ": " + e.getStatusCode();
+                errors.add(error);
+                if (e.getStatusCode().value() == 429 || e.getStatusCode().value() == 503 || e.getStatusCode().value() == 404) continue;
+                throw new RuntimeException("Critical API Error: " + e.getResponseBodyAsString());
+            } catch (Exception e) { 
+                errors.add("Model " + model + ": " + e.getMessage());
             }
         }
-        
-        throw new RuntimeException("All Gemini models failed. Last error: " + (lastException != null ? lastException.getMessage() : "Unknown"));
+        throw new RuntimeException("All models failed. Attempts: " + String.join(" | ", errors));
     }
 
     private List<MergedNewsCluster> parseClusterJsonFromAI(String rawText) {
         try {
-            if (rawText == null || rawText.isEmpty()) {
-                 return List.of(new MergedNewsCluster("Analysis Error", "AI returned empty response.", "N/A", "N/A", "0", "N/A", Collections.emptyList()));
-            }
             String jsonText = rawText.replace("```json", "").replace("```", "").trim();
             return objectMapper.readValue(jsonText, new TypeReference<List<MergedNewsCluster>>(){});
         } catch (Exception e) {
-            System.err.println("Failed to parse Cluster JSON: " + rawText);
-            e.printStackTrace();
-            return List.of(new MergedNewsCluster(
-                "Analysis Error",
-                "Failed to parse AI response. Raw output logged on server.",
-                "N/A", "N/A", "0", "N/A",
-                Collections.emptyList()
-            ));
+            return List.of(new MergedNewsCluster("Analysis Error", "Failed to parse AI response.", "N/A", "N/A", "0", "N/A", Collections.emptyList(), "ParseError"));
         }
     }
 
-    @SuppressWarnings("unchecked")
     private String extractTextFromResponse(Map<String, Object> responseBody) {
         try {
             List<Map<String, Object>> candidates = (List<Map<String, Object>>) responseBody.get("candidates");
             if (candidates != null && !candidates.isEmpty()) {
                 Map<String, Object> candidate = candidates.get(0);
-                String finishReason = (String) candidate.get("finishReason");
-                if ("SAFETY".equals(finishReason)) {
-                    System.err.println("Gemini Safety Filter Triggered!");
-                    return null;
-                }
-                
+                if ("SAFETY".equals(candidate.get("finishReason"))) return null;
                 Map<String, Object> content = (Map<String, Object>) candidate.get("content");
                 if (content != null) {
                     List<Map<String, Object>> parts = (List<Map<String, Object>>) content.get("parts");
-                    if (parts != null && !parts.isEmpty()) {
-                        return (String) parts.get(0).get("text");
-                    }
+                    if (parts != null && !parts.isEmpty()) return (String) parts.get(0).get("text");
                 }
             }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        } catch (Exception e) {}
         return "{}";
     }
 }
